--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.cdhgold.topmeet"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.1"
+        versionCode 4
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,4 +32,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.android.billingclient:billing:2.1.0'
+
+    implementation 'com.google.android.play:core:1.8.0'
+
+    implementation 'com.google.android.material:material:1.0.0'
 }
